# rust-pixel-tracker

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-3595e460148436f1269217baca0ecdb58932f16d3eda867e1f972d0b7c90d316.json  query-5627bdf18ca3f0d61d7d2610c4dad7bbe0f8083183cbaa8270d5866dcc4661d8.json  query-aed10c606aee5561dd4bf11b478fbcfe52a4ef32d82401be758998776daf896b.json  query-c789626ec9910fa7e49a3ffc45e9c7262ecc718a4174abddbfe7746812ec9381.json
migrations/: 20241230213020_initial.sql  schema.sql
src/: main.rs
