[package]
name = "pulse"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.2.1", features = ["rustls"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "time"] }
time = { version = "0.3", features = ["formatting", "serde"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"