[package]
name = "pulse"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", features = ["rustls"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite", "time"] }
time = { version = "0.3.37", features = ["formatting", "serde"] }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
